@startuml Blackjack

class Game {
  -string CONTINUE
  -string STOP
  -array GAME_STATUS

  -int MAX_NUM_OF_PLAYERS
  -int MAX_BET
  -Deck deck
  -Dealer dealer
  -array<int,Player> players
  -int status

  +__construct()
  +getDeck()
  +getDealer()
  +getPlayers()
  +play()
  -set()
  -placeYourBets()
  -startGame()
  -action()
  -resultGame()
  -resultCalcChips()
  -selectContinueOrStop()
  -end()
  +addPlayerAsSecondHand()
  +removeSplitPlayer()
}

class Deck {
  -array<int,array<string,int|string>> deck

  +__construct()
  +getDeck()
  +initDeck()
  +takeACard()
}

class Card {
  -array CARD_SCORE
  -array SUITS

  +createNewDeck()
}

class Dealer {
  +int NUM_OF_FIRST_HAND
  -DealerPlayer dealerPlayer
  -Judge judge
  -ChipCalculator chipCalculator
  -SpecialRule specialRule

  +__construct()
  +getDealerPlayer()
  +getJudge()
  +getChipCalculator()
  +getSpecialRule()
  +dealOutFirstHand()
  +dealOneCard()
}

class Judge {
  +checkBurst()
  +judgeWinOrLose()
  -hasStand()
  -compareScoreTotal()
}

class ChipCalculator {
  +calcChips()
  +calcChipsSplitFirstHand()
  +calcChipsSplitSecondHand()
}

class SpecialRule {
  +applySpecialRule()
  -doubleDown()
  -split()
  -surrender()

}

abstract Player {
  +HIT
  +STAND
  +BURST
  +WIN
  +LOSE
  +DRAW
  +NO_SPLIT
  +SPLIT_FIRST
  +SPLIT_SECOND

  -string name
  -int chips
  -int bets
  -array<int,array<string,int|string>> hand
  -int scoreTotal
  -int countAce
  -string status
  -int splitStatus

  +__construct()
  +getName()
  +getChips()
  +getBets()
  +getHand()
  +getScoreTotal()
  +getStatus()
  +getSplitStatus()
  +addACardToHand()
  +calcScoreTotal()
  -calcAceScore()
  +changeBets()
  +changeChips()
  +changeHand()
  +changeStatus()
  +changeSplitStatus()
  +reset()
}

interface PlayerAction {
  +action()
  +selectHitOrStand()
}

interface PlayerBet {
  +bet()
  +selectBets()
}

class DealerPlayer {
  +action()
  +selectHitOrStand()
}

class ManualPlayer {
  +bet()
  +selectBets()
  +action()
  +selectHitOrStand()
}

class AutoPlayer {
  +bet()
  +selectBets()
  +action()
  +selectHitOrStand()
}

class Validator <<trait>> {
  +validateInputYesOrNo()
  +validateInputNumOfPlayer()
  +validateInputBets()
  +validateSplitConditions()
}

class Message {
  +getPlaceYourBetsMessage()
  +getDealerFirstHandMessage()
  +getLoseByBurstMessage()

  +getScoreTotalMessage()
  +getProgressQuestionMessage()
  +getCardDrawnMessage()
  +getInputErrorMessage()

  +getScoreTotalResultMessage()
  +getStandMessage()
  +getDealerBurstMessage()
  +getWinByBurstMessage()
  +getResultMessage()
}

Game *-- Deck
Deck *-- Card
Game *-- Dealer
Deck - Dealer
Dealer - Player
Dealer *--- Judge
Dealer *---- ChipCalculator
Dealer -- SpecialRule
Game -- SpecialRule
SpecialRule -- ManualPlayer
SpecialRule -- Validator
Dealer *-- DealerPlayer
Game -- Player
Game --- ManualPlayer
Game --- AutoPlayer
Player <|--- DealerPlayer
Player <|--- ManualPlayer
Player <|--- AutoPlayer
PlayerAction <|.. DealerPlayer
PlayerAction <|.. ManualPlayer
PlayerAction <|.. AutoPlayer
PlayerBet <|.. ManualPlayer
PlayerBet <|.. AutoPlayer
ManualPlayer -- Validator
AutoPlayer -- Validator
Game ----- Validator
Game -- Message

@enduml
